# mom

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-16-mom-canvas.md
docs/superpowers/specs/: 2026-04-16-mom-canvas-design.md
skill/: SKILL.md
src/mom/: cli.py  config.py  errors.py  font.py  gh.py  git_ops.py  layout.py  preview.py
tests/: test_cli.py  test_config.py  test_e2e.py  test_errors.py  test_font.py  test_gh.py  test_git_ops.py  test_layout.py  test_preview.py
