[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mom-canvas"
version = "0.1.0"
description = "Draw text on your GitHub contribution graph."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mark SSD", email = "aveyurov@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "responses>=0.25",
]

[project.scripts]
mom = "mom.cli:app"

[project.urls]
Homepage = "https://github.com/mark-ssd/mom"

[tool.hatch.build.targets.wheel]
packages = ["src/mom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = ["live: tests that hit real GitHub (opt-in, not run in CI)"]
